# os-project

./: .gitignore  CMakeLists.txt  README.md  README.txt  analyze.py  explanation.md  make_figures.py  make_story.py  report.md  run_experiments.py
json/: scenario1.json  scenario10.json  scenario11.json  scenario12.json  scenario13.json  scenario14.json  scenario15.json  scenario2.json  scenario3.json  scenario4.json  scenario5.json  scenario6.json  scenario7.json  scenario8.json  scenario9.json  scenarios.md  test.json
src/: fcfs.cpp  fcfs.h  hybrid.cpp  hybrid.h  ljf.cpp  lottery.cpp  lottery.h  main.cpp  policy.cpp  policy.h  priority.c  priority.cpp  priority.h  rr.cpp  rr.h  schedule.cpp  schedule.h  sjf.cpp  sjf.h  srtf.cpp  srtf.h  strategy.cpp  strategy.h  visualizer.py
